--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-DB_URI=mongodb+srv://admin:KidGI7O2WoWBJNib@mernauth.hlygf.mongodb.net/mernAuthDB?retryWrites=true&w=majority
+DB_URI=
 DB_PORT=4000
