--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.3",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
     "validator": "^13.6.0"
   },
   "devDependencies": {
